* Avoid extracting parenthesis around pseudos parameters and having to remove them later [Diego Perini]

* Ensure client_api() doesn't use an optimized selector for the compiled/dom cache. [jddalton]

* Ensure selectors like `.foo > *` and `.foo >` return the same results. [jddalton]

* Assume `context` on selectors like `> h3` which don't specify one. [jddalton]

* Avoid escaping characters that don't need it in regexps and simplify `reSplitGroup` and `reSplitToken`. [jddalton]

* Ensure the div test element is removed from the document. [jddalton]

* Make NWMatcher work when embedded in XHTML or XML documents. [jddalton]

* Ensure ancestor/descendant resolvers don't end on the document node. [Diego Perini]

* Removed the client_api() named expression for Safari 2 support. [Diego Perini]

* Refine the `reValidator` regexp. [jddalton, Diego Perini]

* Remove unused methods getChildren() and getNextSibling(). [Diego Perini]

* Rewrite client_api() to avoid extra optimizations that are handled better by the selector compiler. [Diego Perini, jddalton]

* Add wildcard `*` tagName processing to the `RE_SIMPLE_SELECTOR` regexp for non-IE browsers. [Diego Perini]

* Add `context` fallback to byClass(). [Diego Perini]

* Fix `of-type` selectors when no context is given by removing the `indexesByTag` cache. [Diego Perini]

* Make `RE_BUGGY_QSAPI` filter out selectors that cause IE to throw errors. [jddalton]

* Fix a bug in the compiler for a selector like `.a1 ~ *` throwing an error when the W3C element traversal api is supported. [jddalton]

* unit test: Add Slick XML unit test and fix a bug with JSSpec in Opera 9.64. [jddalton]

* Ensure feature test results return boolean values and make BUGGY_GEBCN test against a string and not a regexp. [jddalton]

* unit test: Add Slick unit tests. [jddalton]

* Add NW.Dom.setQSA(enabled) to allow testing NW.Dom.select() with and without using querySelectorAll(). [jddalton]
