@@ -1,3 +1,5 @@
+* Ensure selectors like `* > :first-child` and `> :first-child` return the same results. [jddalton]
+
 * Avoid extracting parenthesis around pseudos parameters and having to remove them later [Diego Perini]
 
 * Ensure client_api() doesn't use an optimized selector for the compiled/dom cache. [jddalton]
